- modified html - modified the script page - added a new main.js page - added bootstrap, jquery to page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Graph Generate</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="node_modules/boostrap/dist/css/bootstrap.css">
   </head>
   <body>
     <div class="envelope">
@@ -11,7 +11,10 @@
 
       </div>
     </div>
+    <script src="node_modules/jquery/dist/jquery.js" charset="utf-8"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
     <script src="node_modules/konva/konva.js" charset="utf-8"></script>
     <script src="script.js" charset="utf-8"></script>
+    <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
