--- a/index.html
+++ b/index.html
@@ -2,20 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tree Drawing</title>
+    <title>Collatz Conjecture App</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container">
-      <div class="">
-        <button type="button" id="btnOpen" class="btn btn-default">Open...</button>
-        <a href="javascript:void(0)" id="toggle-preview"><small>show</small></a>
-      </div>
-      <input type="file" name="" id="fileOpen" style="display:none">
-      <div id="json-preview-container" class="well">
-        <textarea id="json-preview"></textarea>
-        <button type="button" id="btnDraw" class="btn btn-default btn-xs-small">Draw</button>
+    <div>
+      <div>
+        <small><a href="javascript:void(0)" id="settings">Show settings</a></small>
+        <div id="params" class="form-inline">
+          <div class="form-group">
+            <label for="iter-level">Iterations:</label>
+            <select class="form-control" id="iter-level">
+              <option value="5">5</option>
+              <option value="10">10</option>
+              <option value="15">15</option>
+              <option value="20">20</option>
+              <option value="25">25</option>
+              <option value="-1">Custom</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="cust">Custom Iteration Level:</label>
+            <input type="text" id="cust" class="form-control" value="" disabled="">
+          </div>
+          <div>
+            <button type="button" id="btnGenerate" class="btn btn-primary">Generate</button>
+          </div>
+        </div>
       </div>
       <div id="region">
       </div>
