added save feature

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <div>
       <div>
-        <small><a href="javascript:void(0)" id="settings">Show settings</a></small>
+        <ul class="list-inline">
+          <li><small><a href="javascript:void(0)" id="settings">Show settings</a></small></li>
+          <li><small><a href="javascript:void(0)" id="saveBtn">Save</a></small></li>
+        </ul>
+
         <div id="params" class="form-inline">
           <div class="form-group">
             <label for="iter-level">Iterations:</label>
